--- a/phpunit/phpunit.xml.dist
+++ b/phpunit/phpunit.xml.dist
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- http://www.phpunit.de/manual/current/en/appendixes.configuration.html -->
-<phpunit
-    colors                      = "true"
-    >
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/3.7/phpunit.xsd"
+	bootstrap="bootstrap.php"
+	verbose="true"
+    colors="true">
 
     <testsuites>
         <testsuite name="Project Tango">
