--- a/phpunit/phpunit.xml.dist
+++ b/phpunit/phpunit.xml.dist
@@ -9,7 +9,8 @@
 
     <testsuites>
         <testsuite name="Project Tango">
-			<file>db/test.php</file>
+			<file>db/pdo.php</file>
+			<file>db/enum.php</file>
         </testsuite>
     </testsuites>
 </phpunit>
