--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		"php": ">=5.5.0"
 	},
     "require-dev": {
-        "phpunit/phpunit": "4.5.*"
+        "phpunit/phpunit": "4.6.*",
+		"phpdocumentor/phpdocumentor": "2.*"
     }
 }
