up Core\Util::flock

--- a/phpunit/phpunit.xml.dist
+++ b/phpunit/phpunit.xml.dist
@@ -11,6 +11,7 @@
         <testsuite name="Project Tango">
 			<file>db/pdo.php</file>
 			<file>db/enum.php</file>
+			<file>flock/test.php</file>
         </testsuite>
     </testsuites>
 </phpunit>
