--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
 
 before_script:
   - composer self-update
-  - composer update
+  - composer update 1>/dev/null
   - mysql < phpunit/db/create_table.sql
 
 script: 
