--- a/phpunit/mongo_phpunit.xml.dist
+++ b/phpunit/mongo_phpunit.xml.dist
@@ -9,9 +9,13 @@
 
     <testsuites>
         <testsuite name="Project Tango">
+			<file>mongo/ai.php</file>
+			<file>mongo/batch.php</file>
+			<!--
 			<file>db/pdo.php</file>
 			<file>db/enum.php</file>
 			<file>flock/test.php</file>
+			-->
         </testsuite>
     </testsuites>
 </phpunit>
