--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,31 @@
-[
-	"这个文件存在的目的，只是为了让 phpdoc 知道自己是在 composer 里而已",
-	
-	"没有其他用途",
-
-	"不要改这个文件（防止一旦运行 composer 会产生灾难性问题）",
-
-	"要改改 mod-composer.json 那个文件"
-]
+{
+	"name": "tango/tango",
+	"license": "MIT",
+	"description": "Tango Framework",
+	"homepage": "https://github.com/zhengkai/tango",
+	"authors": [
+		{
+			"name": "Zheng Kai",
+			"email": "zhengkai@gmail.com",
+			"homepage": "https://soulogic.com/",
+			"role": "Developer"
+		},
+		{
+			"name": "Ning Junjie",
+			"email": "bupt1987@gmail.com",
+			"role": "Developer"
+		}
+	],
+    "autoload": {
+		"psr-4": {
+			"Tango\\": "lib/"
+		}
+    },
+	"require": {
+		"php": ">=5.5.0"
+	},
+    "require-dev": {
+        "phpunit/phpunit": "@stable",
+		"phpdocumentor/phpdocumentor": "@stable"
+    }
+}
