--- a/phpunit/phpunit.xml.dist
+++ b/phpunit/phpunit.xml.dist
@@ -10,8 +10,11 @@
     <testsuites>
         <testsuite name="Project Tango">
 			<file>db/pdo.php</file>
+			<!--
+			<file>db/pdo.php</file>
 			<file>db/enum.php</file>
 			<file>flock/test.php</file>
+			 -->
         </testsuite>
     </testsuites>
 </phpunit>
