--- a/phpunit/phpunit.xml.dist
+++ b/phpunit/phpunit.xml.dist
@@ -9,7 +9,7 @@
 
     <testsuites>
         <testsuite name="Project Tango">
-			<file>db/pdo.php</file>
+			<file>page/html.php</file>
 			<!--
 			<file>db/pdo.php</file>
 			<file>db/enum.php</file>
