--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 
 before_script:
   - rm -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini
-  - composer update
+  - composer update --quiet
   - mysql < phpunit/db/create_table.sql
 
 script: 
